Updated the gpt model reference name.

--- a/notebooks/assistant-03-function.ipynb
+++ b/notebooks/assistant-03-function.ipynb
@@ -41,25 +41,12 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "388.4700012207031"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_stock_price(symbol: str) -> float:\n",
     "    stock = yf.Ticker(symbol)\n",
     "    price = stock.history(period=\"1d\")['Close'].iloc[-1]\n",
-    "    return price\n",
-    "\n",
-    "get_stock_price(\"MSFT\")"
+    "    return price"
    ]
   },
   {
@@ -111,7 +98,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Added assistant:  asst_ULsetpqcIHRqBISBzel04UZ3 1\n"
+      "Added assistant:  asst_2mM268li4IHKNtpmT0vk8wVw 1\n"
      ]
     }
    ],
@@ -123,7 +110,7 @@
     "                                                  name=\"fta-Securities Trading Assistant\",\n",
     "                                                  instructions=\"You are a personal securities trading assistant. Please be polite, professional, helpful, and friendly.\", \n",
     "                                                  tools=tools_list, \n",
-    "                                                  model=common.gpt_deployment_name)"
+    "                                                  model=framework.gpt_deployment_name)"
    ]
   },
   {
@@ -177,17 +164,19 @@
      "text": [
       "Waiting for the Assistant to process...\n",
       "Waiting for the Assistant to process...\n",
+      "Waiting for the Assistant to process...\n",
       "Function Calling\n",
-      "{'tool_calls': [{'id': 'call_Nmgt1xyiXuW5tKNNvdPNS073', 'function': {'arguments': '{\"symbol\": \"MSFT\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_wcdbWjvesy6vexLADazpZGSj', 'function': {'arguments': '{\"symbol\": \"NVDA\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
+      "{'tool_calls': [{'id': 'call_zuFytyuWTe7mnloLJSmzmUOm', 'function': {'arguments': '{\"symbol\": \"MSFT\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_Udk3uBeRCReP9AW1hhQfjTKa', 'function': {'arguments': '{\"symbol\": \"NVDA\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
       "Submitting outputs back to the Assistant...\n",
       "Waiting for the Assistant to process...\n",
-      "Assistant: The latest closing stock prices are as follows:\n",
+      "Waiting for the Assistant to process...\n",
+      "Assistant: The latest stock prices are as follows:\n",
       "\n",
       "- Microsoft (MSFT): $388.47\n",
       "- NVIDIA (NVDA): $547.10\n",
       "User: Can you please provide me the latest stock prices for Microsoft and NVIDIA?\n",
-      "ThreadDeleted(id='thread_L58eXV6XvbXv0DMPLfGwg9P1', deleted=True, object='thread.deleted')\n",
-      "AssistantDeleted(id='asst_ULsetpqcIHRqBISBzel04UZ3', deleted=True, object='assistant.deleted')\n"
+      "ThreadDeleted(id='thread_8u9udV165DG3SXQACXbyAjKQ', deleted=True, object='thread.deleted')\n",
+      "AssistantDeleted(id='asst_2mM268li4IHKNtpmT0vk8wVw', deleted=True, object='assistant.deleted')\n"
      ]
     }
    ],
@@ -248,15 +237,6 @@
     "    else:\n",
     "        print(\"Waiting for the Assistant to process...\")\n",
     "        time.sleep(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Dispose"
    ]
   }
  ],
