Updated the framework cleaup routine to include files.

--- a/notebooks/assistant-02-framework.ipynb
+++ b/notebooks/assistant-02-framework.ipynb
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test messages and recall the threads across users\n",
+    "### Call messages for different users, create a new thread if one does not exists, and reuse a thread if one exists.\n",
     "\n",
     "Here threads can be recalled based on a user_id. The system will create a new thread if it does not exist or reuse and existing one."
    ]
@@ -125,6 +125,13 @@
    ],
    "source": [
     "golang_tutor = framework.create_assistant(client,name=\"Golang\",instructions=\"You are an assistant that can help write and explain Go code.\", model=common.gpt_deployment_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get the messages for a new user"
    ]
   },
   {
@@ -269,7 +276,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Cleanup"
+    "### Cleanup\n",
+    "\n",
+    "The framework keeps a list of instantiated assistants, clients, and files"
    ]
   },
   {
