Refactored the creation of the OpenAI clients using karks.

--- a/notebooks/assistant-02-framework.ipynb
+++ b/notebooks/assistant-02-framework.ipynb
@@ -19,11 +19,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import common\n",
     "import oaihelper as framework\n",
     "\n",
     "## Get an OpenAI client\n",
-    "client = framework.get_openai_client()"
+    "client = framework.get_openai_client(api_key=framework.api_KEY,\n",
+    "        api_version=framework.api_version,\n",
+    "        azure_endpoint=framework.api_URI,)"
    ]
   },
   {
@@ -55,7 +56,7 @@
     "                                                  name=\"fta-Math Tutor\",\n",
     "                                                  instructions=\"You are a personal math tutor. Write and run code to answer math questions.\", \n",
     "                                                  tools=[{\"type\": \"code_interpreter\"}], \n",
-    "                                                  model=common.gpt_deployment_name)"
+    "                                                  model=framework.gpt_deployment_name)"
    ]
   },
   {
@@ -124,7 +125,7 @@
     }
    ],
    "source": [
-    "golang_tutor = framework.create_assistant(client,name=\"Golang\",instructions=\"You are an assistant that can help write and explain Go code.\", model=common.gpt_deployment_name)"
+    "golang_tutor = framework.create_assistant(client,name=\"Golang\",instructions=\"You are an assistant that can help write and explain Go code.\", model=framework.gpt_deployment_name)"
    ]
   },
   {
