--- a/notebooks/assistant-03-function.ipynb
+++ b/notebooks/assistant-03-function.ipynb
@@ -21,13 +21,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import common\n",
     "import time\n",
     "import oaihelper as framework\n",
     "import yfinance as yf\n",
     "\n",
     "## Get an OpenAI client\n",
-    "client = framework.get_openai_client()"
+    "client = framework.get_openai_client(api_key=framework.api_KEY,\n",
+    "        api_version=framework.api_version,\n",
+    "        azure_endpoint=framework.api_URI,)"
    ]
   },
   {
