--- a/notebooks/assistant-05-code_function_la_email.ipynb
+++ b/notebooks/assistant-05-code_function_la_email.ipynb
@@ -31,7 +31,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import common\n",
     "import time\n",
     "import requests\n",
     "import oaihelper as framework\n",
@@ -39,7 +38,9 @@
     "\n",
     "\n",
     "## Get an OpenAI client\n",
-    "client = framework.get_openai_client()"
+    "client = framework.get_openai_client(api_key=framework.api_KEY,\n",
+    "        api_version=framework.api_version,\n",
+    "        azure_endpoint=framework.api_URI,)"
    ]
   },
   {
