--- a/notebooks/assistant-10-retrieval.ipynb
+++ b/notebooks/assistant-10-retrieval.ipynb
@@ -24,7 +24,9 @@
     "import oaihelper as framework\n",
     "\n",
     "## Get an OpenAI client\n",
-    "client = framework.get_openai_client()"
+    "client = framework.get_openai_client(api_key=framework.api_KEY,\n",
+    "        api_version=framework.api_version,\n",
+    "        azure_endpoint=framework.api_URI,)"
    ]
   },
   {
