Updated common to framework in a few assistants.

--- a/notebooks/assistant-01-code_interpreter.ipynb
+++ b/notebooks/assistant-01-code_interpreter.ipynb
@@ -62,7 +62,18 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Thread(id='thread_w2P4RmMnr5rocMVEHCoYKHMp', created_at=1705357364, metadata={}, object='thread')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "thread = client.beta.threads.create()\n",
     "thread"
@@ -83,7 +94,7 @@
     {
      "data": {
       "text/plain": [
-       "ThreadMessage(id='msg_HJhnNNOMeAg4sxygXGPAE1Nk', assistant_id=None, content=[MessageContentText(text=Text(annotations=[], value='What is the 1001st prime number. Can you help me?'), type='text')], created_at=1705347742, file_ids=[], metadata={}, object='thread.message', role='user', run_id=None, thread_id='thread_lW8wNk5ZpIIsZGP4lFwaT48T')"
+       "ThreadMessage(id='msg_4jqAAdkID4k4QgPdI4q29Bts', assistant_id=None, content=[MessageContentText(text=Text(annotations=[], value='What is the 1001st prime number. Can you help me?'), type='text')], created_at=1705357368, file_ids=[], metadata={}, object='thread.message', role='user', run_id=None, thread_id='thread_w2P4RmMnr5rocMVEHCoYKHMp')"
       ]
      },
      "execution_count": 4,
@@ -112,13 +123,25 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'queued'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "run = client.beta.threads.runs.create(\n",
     "  thread_id=thread.id,\n",
     "  assistant_id=assistant.id,\n",
     "  instructions=\"Please address the user as Jane Doe. The user has a premium account.\"\n",
-    ")"
+    ")\n",
+    "run.status"
    ]
   },
   {
@@ -161,7 +184,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "assistant The 1001st prime number is 7,927.\n",
+      "assistant The 1001st prime number is 7927.\n",
       "user What is the 1001st prime number. Can you help me?\n"
      ]
     }
@@ -176,8 +199,7 @@
     "  for line in content:\n",
     "    txt = line.text\n",
     "    # TODO: Is there a better way to do this? Should it be sorted by date?\n",
-    "    print(msg.role,txt.value)\n",
-    "  "
+    "    print(msg.role,txt.value)"
    ]
   },
   {
@@ -196,8 +218,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Assistant(id='asst_jv7Ao4XitPzec57ot7eNUNog', created_at=1705347711, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
-      "Assistant(id='asst_8SsDBdShVdvfaug6t2vbUgUM', created_at=1705256301, description=None, file_ids=[], instructions='You are a personal securities trading assistant. Please be polite, professional, helpful, and friendly.', metadata={}, model='gpt-4-turbo-test', name='fta-Securities Trading Assistant', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter'), ToolFunction(function=FunctionDefinition(name='get_stock_price', description='Retrieve the latest closing price of a stock using its ticker symbol', parameters={'type': 'object', 'properties': {'symbol': {'type': 'string', 'description': 'The ticker symbol of the stock'}}, 'required': ['symbol']}), type='function'), ToolFunction(function=FunctionDefinition(name='send_email', description='sends an email to a recipient(s).', parameters={'type': 'object', 'properties': {'to': {'type': 'string', 'description': 'The email(s) the email should be sent to.'}, 'content': {'type': 'string', 'description': 'The content of the email.'}}, 'required': ['to', 'content']}), type='function')])\n"
+      "Assistant(id='asst_4uL6U8lq2BP2xg7fuzl89M6h', created_at=1705357361, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
+      "Assistant(id='asst_hUYZJhA1GgPOjYyaD0arb1zr', created_at=1705189970, description=None, file_ids=[], instructions='You are a personal securities trading assistant. Please be polite, professional, helpful, and friendly.', metadata={}, model='gpt-4-turbo-test', name='fta-Securities Trading Assistant', object='assistant', tools=[ToolFunction(function=FunctionDefinition(name='get_stock_price', description='Retrieve the latest closing price of a stock using its ticker symbol', parameters={'type': 'object', 'properties': {'symbol': {'type': 'string', 'description': 'The ticker symbol of the stock'}}, 'required': ['symbol']}), type='function'), ToolFunction(function=FunctionDefinition(name='send_email', description='sends an email to a recipient(s).', parameters={'type': 'object', 'properties': {'to': {'type': 'string', 'description': 'The email(s) the email should be sent to.'}, 'content': {'type': 'string', 'description': 'The content of the email.'}}, 'required': ['to', 'content']}), type='function')])\n"
      ]
     }
    ],
@@ -224,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
