--- a/notebooks/assistant-04-function_la_email.ipynb
+++ b/notebooks/assistant-04-function_la_email.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
     "    \"function\": {\n",
     "\n",
     "        \"name\": \"get_stock_price\",\n",
-    "        \"description\": \"Retrieve the latest closing price of a stock using its ticker symbol\",\n",
+    "        \"description\": \"Retrieve the latest closing price of a stock using its ticker symbol.\",\n",
     "        \"parameters\": {\n",
     "            \"type\": \"object\",\n",
     "            \"properties\": {\n",
@@ -114,7 +114,7 @@
     "    \"function\": {\n",
     "\n",
     "        \"name\": \"send_email\",\n",
-    "        \"description\": \"sends an email to a recipient(s).\",\n",
+    "        \"description\": \"Sends an email to a recipient(s).\",\n",
     "        \"parameters\": {\n",
     "            \"type\": \"object\",\n",
     "            \"properties\": {\n",
@@ -142,14 +142,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Added assistant:  asst_fddg8Yp7lkGhCqkRQEgoOPDP 2\n"
+      "Added assistant:  asst_GzRUe4Wv0RuVx8qw5zBnurqr 1\n"
      ]
     }
    ],
@@ -161,7 +161,7 @@
     "                                                  name=\"fta-Securities Trading Assistant\",\n",
     "                                                  instructions=\"You are a personal securities trading assistant. Please be polite, professional, helpful, and friendly.\", \n",
     "                                                  tools=tools_list, \n",
-    "                                                  model=common.gpt_deployment_name)"
+    "                                                  model=framework.gpt_deployment_name)"
    ]
   },
   {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
     "    thread_id=thread.id,\n",
     "    role=\"user\",\n",
     "    content=\"For the following article: \\n\\nArticle: \"\"\"\"\"\"\" + article + \"\\n\"\"\"\"\"\"\" +\n",
-    "    \"\\n\\nEmail a summary of the article in simple HTML format, include today's date, include a list of the closing prices of the stocks mentioned in the article to: alemor@microsoft.com.\" +\n",
+    "    \"\\n\\nEmail a summary of the article in simple HTML format, include today's date, include a list of the closing prices of the stocks mentioned in the article to: alemor@microsoft.com and vsantana@microsoft.com.\" +\n",
     "    \"Use only the provide text.\"\n",
     ")\n",
     "\n",
@@ -222,30 +222,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Waiting for the Assistant to process...\n",
-      "Waiting for the Assistant to process...\n",
-      "Waiting for the Assistant to process...\n",
       "Function Calling\n",
-      "{'tool_calls': [{'id': 'call_HypMXVlw2l0rpHBJzwDGcpWo', 'function': {'arguments': '{\"symbol\": \"NVDA\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_CWkkouXs7KIVaY2Cn1CK41U9', 'function': {'arguments': '{\"symbol\": \"MSFT\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_Ox82T06Af3OgwlPisslQdHOk', 'function': {'arguments': '{\"symbol\": \"AAPL\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_CKeows4L0OXDuOJLQqgq4YhM', 'function': {'arguments': '{\"symbol\": \"NVO\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_1vfe54CjW7e5ErbKMZTBykmP', 'function': {'arguments': '{\"symbol\": \"MELI\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_qK44xMZnbVmpplTt2zlgLDEN', 'function': {'arguments': '{\"symbol\": \"TW\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_sSbjQmmDIfBvBtYDSDUFj7Jd', 'function': {'arguments': '{\"symbol\": \"TSLA\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
+      "{'tool_calls': [{'id': 'call_AycTIYPxFT0DDrwLyC5X5NeG', 'function': {'arguments': '{\"symbol\": \"NVDA\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_byEkr7fdVtasX4E4lSgYlPnX', 'function': {'arguments': '{\"symbol\": \"MSFT\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_t92SXjhco0ztGAcvrGNaG8Zh', 'function': {'arguments': '{\"symbol\": \"AAPL\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_G7DmTV8VtRYKkYQfvI5tRmML', 'function': {'arguments': '{\"symbol\": \"NVO\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_OjGr4BeMPInGBRnPimQLW2l8', 'function': {'arguments': '{\"symbol\": \"MELI\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_YaJDw8kvDshkFxXFGxdCkMUw', 'function': {'arguments': '{\"symbol\": \"TW\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_eiwe2QUkmxtokEaN8lrobHjO', 'function': {'arguments': '{\"symbol\": \"TSLA\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
       "Submitting outputs back to the Assistant...\n",
       "Waiting for the Assistant to process...\n",
       "Waiting for the Assistant to process...\n",
       "Waiting for the Assistant to process...\n",
       "Waiting for the Assistant to process...\n",
+      "Waiting for the Assistant to process...\n",
+      "Waiting for the Assistant to process...\n",
+      "Waiting for the Assistant to process...\n",
       "Function Calling\n",
-      "{'tool_calls': [{'id': 'call_VbWCIhnneuNhtpfEW1c5YP8G', 'function': {'arguments': '{\\n  \"to\": \"alemor@microsoft.com\",\\n  \"content\": \"<html>\\\\n<head>\\\\n<title>Market Update</title>\\\\n</head>\\\\n<body>\\\\n<h1>Stock Market Summary</h1>\\\\n<p>Date: January 13, 2024</p>\\\\n<p>The stock market experienced a strong rebound this week with many stocks showing buy signals, notably Nvidia. Microsoft is hovering just above a buy point, threatening Apple\\'s market cap position. Novo Nordisk remains in the buy zone, while MercadoLibre and Tradeweb Markets indicated intraday entries. Despite the upside, Tesla continued its sell-off, breaking support levels.</p>\\\\n<h2>Closing Prices</h2>\\\\n<ul>\\\\n<li>Nvidia (NVDA): $547.10</li>\\\\n<li>Microsoft (MSFT): $388.47</li>\\\\n<li>Apple (AAPL): $185.92</li>\\\\n<li>Novo Nordisk (NVO): $107.16</li>\\\\n<li>MercadoLibre (MELI): $1658.58</li>\\\\n<li>Tradeweb Markets (TW): $95.91</li>\\\\n<li>Tesla (TSLA): $218.89</li>\\\\n</ul>\\\\n</body>\\\\n</html>\"\\n}', 'name': 'send_email'}, 'type': 'function'}]}\n",
+      "{'tool_calls': [{'id': 'call_veR29APWkYfECflpb4LOrOPq', 'function': {'arguments': '{\\n  \"to\": \"alemor@microsoft.com\",\\n  \"content\": \"<html>\\\\n<head></head>\\\\n<body>\\\\n<h1>Stock Market Update</h1>\\\\n<p>Date: January 15, 2024</p>\\\\n<p>\\\\nDow Jones futures will open Sunday evening, along with S&P 500 futures and Nasdaq futures.\\\\n</p>\\\\n<p>\\\\nThe stock market rally had a strong rebound this past week after the major indexes and many leading stocks retreated to start 2024 but soon found support at key levels. A large number of stocks flashed buy signals, including a powerful breakout from Nvidia (NVDA).\\\\n</p>\\\\n<p>\\\\nIt\\'s been a good time to add exposure.\\\\n</p>\\\\n<p>\\\\nNvidia stock is now extended, but fellow AI leader Microsoft (MSFT) is just above a buy point after solid weekly gains, on the cusp of surpassing the market cap of fellow Dow giant Apple (AAPL). Novo Nordisk (NVO) remains in a buy zone.\\\\n</p>\\\\n<p>\\\\nMercadoLibre (MELI) and Tradeweb Markets (TW) flashed entries intraday.\\\\n</p>\\\\n<p>\\\\nOn the downside, Tesla (TSLA) had an ugly week, extending a recent sell-off and breaking key support levels amid a flurry of headlines.\\\\n</p>\\\\n<p>\\\\nNvidia and NVO stock are on IBD Leaderboard. MELI stock, Nvidia and Microsoft are on SwingTrader. MSFT stock is on IBD Long-Term Leaders. Nvidia stock, MercadoLibre, Novo Nordisk and Microsoft are on the IBD 50. Microsoft, Nvidia and MercadoLibre stock are on the IBD Big Cap 20.\\\\n</p>\\\\n<h2>Closing Prices</h2>\\\\n<ul>\\\\n<li>Nvidia (NVDA): $547.10</li>\\\\n<li>Microsoft (MSFT): $388.47</li>\\\\n<li>Apple (AAPL): $185.92</li>\\\\n<li>Novo Nordisk (NVO): $107.16</li>\\\\n<li>MercadoLibre (MELI): $1658.58</li>\\\\n<li>Tradeweb Markets (TW): $95.91</li>\\\\n<li>Tesla (TSLA): $218.89</li>\\\\n</ul>\\\\n</body>\\\\n</html>\"\\n}', 'name': 'send_email'}, 'type': 'function'}]}\n",
       "Sending email...\n",
       "Email sent to: alemor@microsoft.com\n",
       "Submitting outputs back to the Assistant...\n",
       "Waiting for the Assistant to process...\n",
-      "Assistant: The email with the summary of the stock market article and today's closing prices for the mentioned stocks has been sent to alemor@microsoft.com.\n",
+      "Assistant: The email summarizing the article in simple HTML format, including today's date and the closing prices of the mentioned stocks, has been successfully sent to alemor@microsoft.com.\n",
       "User: For the following article: \n",
       "\n",
       "Article: Dow Jones futures will open Sunday evening, along with S&P 500 futures and Nasdaq futures.\n",
@@ -264,8 +264,8 @@
       "\n",
       "\n",
       "Email a summary of the article in simple HTML format, include today's date, include a list of the closing prices of the stocks mentioned in the article to: alemor@microsoft.com.Use only the provide text.\n",
-      "ThreadDeleted(id='thread_6c24ogOlTVQI2Mkvwlwlu6tw', deleted=True, object='thread.deleted')\n",
-      "AssistantDeleted(id='asst_fddg8Yp7lkGhCqkRQEgoOPDP', deleted=True, object='assistant.deleted')\n"
+      "ThreadDeleted(id='thread_MoZVEle5QGFM8CGfWNPKFAc0', deleted=True, object='thread.deleted')\n",
+      "AssistantDeleted(id='asst_GzRUe4Wv0RuVx8qw5zBnurqr', deleted=True, object='assistant.deleted')\n"
      ]
     }
    ],
