--- a/notebooks/assistant-05-code_function_la_email.ipynb
+++ b/notebooks/assistant-05-code_function_la_email.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
     "    \"function\": {\n",
     "\n",
     "        \"name\": \"get_stock_price\",\n",
-    "        \"description\": \"Retrieve the latest closing price of a stock using its ticker symbol\",\n",
+    "        \"description\": \"Retrieve the latest closing price of a stock using its ticker symbol.\",\n",
     "        \"parameters\": {\n",
     "            \"type\": \"object\",\n",
     "            \"properties\": {\n",
@@ -122,7 +122,7 @@
     "    \"function\": {\n",
     "\n",
     "        \"name\": \"send_email\",\n",
-    "        \"description\": \"sends an email to a recipient(s).\",\n",
+    "        \"description\": \"Sends an email to a recipient(s).\",\n",
     "        \"parameters\": {\n",
     "            \"type\": \"object\",\n",
     "            \"properties\": {\n",
@@ -147,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csv_file = framework.upload_file(client,\"../data/fta-portfolio.csv\")"
+    "#csv_file = framework.upload_file(client,\"../data/fta-portfolio.csv\")"
    ]
   },
   {
@@ -166,7 +166,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Added assistant:  asst_D7AqW0t7Dx6EFSpKXqgSE1Mt 1\n"
+      "Added assistant:  asst_2hBLzf6dHveCJAccwYZxO2ac 1\n"
      ]
     }
    ],
@@ -178,8 +178,8 @@
     "                                                  name=\"fta-Securities Trading Assistant\",\n",
     "                                                  instructions=\"You are a personal securities trading assistant. Please be polite, professional, helpful, and friendly.\", \n",
     "                                                  tools=tools_list,                                                  \n",
-    "                                                  model=common.gpt_deployment_name,\n",
-    "                                                  file_ids=[csv_file.id])"
+    "                                                  model=framework.gpt_deployment_name,\n",
+    "                                                  )"
    ]
   },
   {
@@ -198,11 +198,21 @@
     "# Step 2: Create a Thread\n",
     "thread = client.beta.threads.create()\n",
     "\n",
+    "\n",
+    "portfolio = \"\"\"Ticker,Price,QTY,Cost\n",
+    "AAPL,250,10,2500\n",
+    "MSFT,100,200,20000\n",
+    "GOOGL,75,1200,90000\n",
+    "AMZN,50,1800,90000\n",
+    "TSLA,500,500,250000\n",
+    "NFLX,80,300,24000\n",
+    "NVDA,120,250,30000\"\"\"\n",
+    "\n",
     "# Step 3: Add a Message to a Thread\n",
     "message = client.beta.threads.messages.create(\n",
     "    thread_id=thread.id,\n",
     "    role=\"user\",\n",
-    "    content=\"Based on the provide portfolio and using latest stock prices, please email me an HTML formatted report at alemor@microsoft.com with the details for each stock based on the latest stock prices, and the best and worst performing stocks in my portfolio.\"\n",
+    "    content=\"Based on the provide portfolio:\\n\\n\" + portfolio + \"\\n\\nPlease email me an HTML formatted report at alemor@microsoft.com with the details for each stock based on the latest stock prices, and the best and worst performing stocks in my portfolio.\"\n",
     ")\n",
     "\n",
     "# Step 4: Run the Assistant\n",
@@ -231,20 +241,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Function Calling\n",
+      "{'tool_calls': [{'id': 'call_WiTmZZDXh4edezJyVcQThh5I', 'function': {'arguments': '{\"symbol\":\"AAPL\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
+      "Submitting outputs back to the Assistant...\n",
+      "Function Calling\n",
+      "{'tool_calls': [{'id': 'call_Y0DCjXr3XFIXiEFTiabBb0YS', 'function': {'arguments': '{\"symbol\":\"MSFT\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
+      "Submitting outputs back to the Assistant...\n",
+      "Function Calling\n",
+      "{'tool_calls': [{'id': 'call_wQMK8TLmkx06TxRriXC1bfqO', 'function': {'arguments': '{\"symbol\": \"GOOGL\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_TThSaZYHWv0OgTUAfZaPrivY', 'function': {'arguments': '{\"symbol\": \"AMZN\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_GsfwfboxVosfgmxduVs9WY2i', 'function': {'arguments': '{\"symbol\": \"TSLA\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_gTPFfDbs5gihDoPQkx5wwWep', 'function': {'arguments': '{\"symbol\": \"NFLX\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_mnWu6FWhUY1Lu5v7B94VL99L', 'function': {'arguments': '{\"symbol\": \"NVDA\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
+      "Submitting outputs back to the Assistant...\n",
       "Waiting for the Assistant to process...\n",
       "Waiting for the Assistant to process...\n",
       "Waiting for the Assistant to process...\n",
-      "Assistant: It seems we are still encountering a persistent issue with reading the uploaded file. Given the repeated `AttributeError` exceptions, we're facing an unusual situation outside of normal file handling scenarios. \n",
+      "Waiting for the Assistant to process...\n",
+      "Waiting for the Assistant to process...\n",
+      "Waiting for the Assistant to process...\n",
+      "Waiting for the Assistant to process...\n",
+      "Waiting for the Assistant to process...\n",
+      "Waiting for the Assistant to process...\n",
+      "Waiting for the Assistant to process...\n",
+      "Waiting for the Assistant to process...\n",
+      "Function Calling\n",
+      "{'tool_calls': [{'id': 'call_XIWHnGcBWp2F3pVEWicblmkV', 'function': {'arguments': '{\"to\":\"alemor@microsoft.com\",\"content\":\"\\\\n<html>\\\\n<head>\\\\n<style>\\\\n    table {\\\\n        width: 100%;\\\\n        border-collapse: collapse;\\\\n    }\\\\n    th, td {\\\\n        padding: 8px;\\\\n        text-align: left;\\\\n        border-bottom: 1px solid #ddd;\\\\n    }\\\\n    th {\\\\n        background-color: #f2f2f2;\\\\n    }\\\\n    .highlight {\\\\n        background-color: #dff0d8;\\\\n    }\\\\n</style>\\\\n</head>\\\\n<body>\\\\n    <h2>Portfolio Report</h2>\\\\n    <table>\\\\n        <tr>\\\\n            <th>Ticker</th>\\\\n            <th>Quantity</th>\\\\n            <th>Purchase Price</th>\\\\n            <th>Cost</th>\\\\n            <th>Current Price</th>\\\\n            <th>Current Value</th>\\\\n            <th>Profit/Loss</th>\\\\n            <th>Performance (%)</th>\\\\n        </tr>\\\\n\\\\n        <tr>\\\\n            <td>AAPL</td>\\\\n            <td>250</td>\\\\n            <td>10</td>\\\\n            <td>2500</td>\\\\n            <td>185.92</td>\\\\n            <td>46480.0</td>\\\\n            <td>43980.0</td>\\\\n            <td>1759.20</td>\\\\n        </tr>\\\\n    \\\\n        <tr>\\\\n            <td>MSFT</td>\\\\n            <td>100</td>\\\\n            <td>200</td>\\\\n            <td>20000</td>\\\\n            <td>388.47</td>\\\\n            <td>38847.0</td>\\\\n            <td>18847.0</td>\\\\n            <td>94.23</td>\\\\n        </tr>\\\\n    \\\\n        <tr>\\\\n            <td>GOOGL</td>\\\\n            <td>75</td>\\\\n            <td>1200</td>\\\\n            <td>90000</td>\\\\n            <td>142.65</td>\\\\n            <td>10698.75</td>\\\\n            <td>-79301.25</td>\\\\n            <td>-88.11</td>\\\\n        </tr>\\\\n    \\\\n        <tr>\\\\n            <td>AMZN</td>\\\\n            <td>50</td>\\\\n            <td>1800</td>\\\\n            <td>90000</td>\\\\n            <td>154.62</td>\\\\n            <td>7731.0</td>\\\\n            <td>-82269.0</td>\\\\n            <td>-91.41</td>\\\\n        </tr>\\\\n    \\\\n        <tr>\\\\n            <td>TSLA</td>\\\\n            <td>500</td>\\\\n            <td>500</td>\\\\n            <td>250000</td>\\\\n            <td>218.89</td>\\\\n            <td>109445.0</td>\\\\n            <td>-140555.0</td>\\\\n            <td>-56.22</td>\\\\n        </tr>\\\\n    \\\\n        <tr>\\\\n            <td>NFLX</td>\\\\n            <td>80</td>\\\\n            <td>300</td>\\\\n            <td>24000</td>\\\\n            <td>492.16</td>\\\\n            <td>39372.8</td>\\\\n            <td>15372.800000000003</td>\\\\n            <td>64.05</td>\\\\n        </tr>\\\\n    \\\\n        <tr>\\\\n            <td>NVDA</td>\\\\n            <td>120</td>\\\\n            <td>250</td>\\\\n            <td>30000</td>\\\\n            <td>547.1</td>\\\\n            <td>65652.0</td>\\\\n            <td>35652.0</td>\\\\n            <td>118.84</td>\\\\n        </tr>\\\\n    \\\\n    </table>\\\\n    <p>Best performer: <strong>AAPL</strong> with a performance of 1759.20%</p>\\\\n    <p>Worst performer: <strong>AMZN</strong> with a performance of -91.41%</p>\\\\n</body>\\\\n</html>\\\\n\"}', 'name': 'send_email'}, 'type': 'function'}]}\n",
+      "Sending email...\n",
+      "Email sent to: alemor@microsoft.com\n",
+      "Submitting outputs back to the Assistant...\n",
+      "Assistant: The email with the HTML formatted report detailing the latest stock prices, the best and worst performing stocks in the portfolio has been sent to alemor@microsoft.com.\n",
+      "User: Based on the provide portfolio:\n",
       "\n",
-      "At this stage, I recommend re-uploading the file or specifying its format explicitly, which could help us bypass the current complications. Can you please provide the file again or inform me of the file's format?\n",
-      "Assistant: It seems that we are encountering a consistent issue with reading the content of the uploaded file, which may indicate a problem outside of standard file format handling. \n",
+      "Ticker,QTY,Purchase,Cost\n",
+      "AAPL,250,10,2500\n",
+      "MSFT,100,200,20000\n",
+      "GOOGL,75,1200,90000\n",
+      "AMZN,50,1800,90000\n",
+      "TSLA,500,500,250000\n",
+      "NFLX,80,300,24000\n",
+      "NVDA,120,250,30000\n",
       "\n",
-      "As an alternative approach, I will attempt to directly read the file content as a binary and then decode it to see if we can determine the format and proceed from there. Let's examine the raw content of the file.\n",
-      "Assistant: Unfortunately, there seems to be an issue with reading the file content; a specific attribute is not available, resulting in an AttributeError. To resolve this, we will examine the file extension explicitly and handle it accordingly. Let me take another look at the file to determine the format and proceed from there.\n",
-      "User: Based on the provide portfolio and using latest stock prices, please email me an HTML formatted report at alemor@microsoft.com with the details for each stock based on the latest stock prices, and the best and worst performing stocks in my portfolio.\n",
-      "ThreadDeleted(id='thread_2k4zBjyJE6tC3C4DqKsHjNvR', deleted=True, object='thread.deleted')\n",
-      "AssistantDeleted(id='asst_D7AqW0t7Dx6EFSpKXqgSE1Mt', deleted=True, object='assistant.deleted')\n",
-      "FileDeleted(id='assistant-IrejZeh7NgwQtzkKmVC87DEJ', deleted=True, object='file')\n"
+      "Please email me an HTML formatted report at alemor@microsoft.com with the details for each stock based on the latest stock prices, and the best and worst performing stocks in my portfolio.\n",
+      "ThreadDeleted(id='thread_1CnAudgu1riGhYFx33735Gbf', deleted=True, object='thread.deleted')\n",
+      "AssistantDeleted(id='asst_2hBLzf6dHveCJAccwYZxO2ac', deleted=True, object='assistant.deleted')\n"
      ]
     }
    ],
@@ -275,7 +311,7 @@
     "        ## Cleanup\n",
     "        print(client.beta.threads.delete(thread.id))\n",
     "        print(client.beta.assistants.delete(stock_assistant.id))\n",
-    "        print(client.files.delete(csv_file.id))\n",
+    "        #print(client.files.delete(csv_file.id))\n",
     "\n",
     "        break\n",
     "    elif run_status.status == 'requires_action':\n",
